--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "author": "tarunama",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
+    "@types/node": "^18.11.9",
     "typescript": "^4.8.4"
   }
 }
