--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "typescript",
     "ddd"
   ],
+  "scripts": {
+    "test": "jest"
+  },
   "author": "tarunama",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
