--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "jest"
   },
+  "packageManager": "pnpm@7.18.1",
   "author": "tarunama",
   "license": "MIT",
   "devDependencies": {
