--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ddd"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "vitest"
   },
   "packageManager": "pnpm@7.18.1",
   "author": "tarunama",
@@ -18,6 +18,8 @@
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vite": "^4.0.3",
+    "vitest": "^0.26.2"
   }
 }
