--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "vite": "^4.0.3",
