--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,11 @@
-export default {
+{
     "env": {
         "browser": true,
         "es2021": true
     },
     "extends": [
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
     ],
     "overrides": [
     ],
