--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ddd"
   ],
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint --ext .js ."
   },
   "packageManager": "pnpm@7.19.0",
   "author": "tarunama",
