--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
+    "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "vite": "^4.0.3",
