--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "test": "vitest",
-    "lint": "eslint --ext .js ."
+    "lint": "eslint --ext .js .",
+    "format": "npx prettier --write ."
   },
   "packageManager": "pnpm@7.19.0",
   "author": "tarunama",
